Add Collaboration Illustration issue #5

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </ul>
           <!-- ISSUE #5: Replace with real collaboration illustration and add alt text -->
           <img
-            src="https://via.placeholder.com/600x300"
-            alt=""
+            src="https://thumbs.dreamstime.com/b/developers-team-concept-character-situation-flat-design-man-woman-discussing-project-working-abstract-code-programming-293552794.jpg"
+            alt="Developers collaborating on open source code"
             class="collab-img"
           />
           <!-- ISSUE #6: Add onclick="toggleSection('git-commands')" -->
